--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,28 +1,28 @@
-<!DOCTYPE html(lang="en")>
-<head>
-  <meta charset="utf-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <title>Mudassir Ali</title>
-  <meta name="description" content=""/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="static/css/main.css"/>
-</head>
-<body>
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="static/js/vendor.js"></script>
-  <script src="static/js/main.js"></script>
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
-  <script>
+doctype html(lang="en")
+head
+  meta(charset='utf-8')
+  meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+  title Mudassir Ali
+  meta(name='description', content='')
+  meta(name='viewport', content='width=device-width, initial-scale=1')
+  link(rel='stylesheet', href='static/css/main.css')
+
+body
+  p Hello world! This is HTML5 Boilerplate.
+  script(src='static/js/vendor.js')
+  script(src='static/js/main.js')
+
+  // Google Analytics: change UA-XXXXX-X to be your site's ID.
+  script.
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-58094087-1', 'auto');
     ga('send', 'pageview');
-    
-  </script>
-  <!-- Custom fonts-->
-  <script type="text/javascript">
+
+  // Custom fonts
+  script(type='text/javascript').
     WebFontConfig = {
     google: { families: [ 'Oswald::latin' ] }
     };
@@ -35,9 +35,8 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wf, s);
     })();
-    
-  </script>
-  <script type="text/javascript">
+
+  script(type='text/javascript').
     WebFontConfig = {
     google: { families: [ 'Lato::latin' ] }
     };
@@ -50,5 +49,3 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wf, s);
     })();
-  </script>
-</body>
