--- a/jade/index.jade
+++ b/jade/index.jade
@@ -8,44 +8,13 @@ head
   link(rel='stylesheet', href='static/css/main.css')
 
 body
-  p Hello world! This is HTML5 Boilerplate.
-  script(src='static/js/vendor.js')
-  script(src='static/js/main.js')
+  include navbar-desktop
+  .js-sections-wrapper
+    include intro
+    include about-me
+    include resume
 
-  // Google Analytics: change UA-XXXXX-X to be your site's ID.
-  script.
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-58094087-1', 'auto');
-    ga('send', 'pageview');
+  include js-scripts
+  include google-analytics
 
-  // Custom fonts
-  script(type='text/javascript').
-    WebFontConfig = {
-    google: { families: [ 'Oswald::latin' ] }
-    };
-    (function() {
-    var wf = document.createElement('script');
-    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-    '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-    wf.type = 'text/javascript';
-    wf.async = 'true';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(wf, s);
-    })();
-
-  script(type='text/javascript').
-    WebFontConfig = {
-    google: { families: [ 'Lato::latin' ] }
-    };
-    (function() {
-    var wf = document.createElement('script');
-    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-    '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-    wf.type = 'text/javascript';
-    wf.async = 'true';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(wf, s);
-    })();
+  include custom-fonts
