--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,92 @@
-@import "./bower_components/bootstrap/less/bootstrap.less";
+@import "../bower_components/bootstrap/less/bootstrap.less";
+@import "../bower_components/fontawesome/less/font-awesome.less";
+// @import (inline) "../bower_components/fullpage/jquery.fullPage.css";
+@import (inline) "../bower_components/bootstrap-vertical-tabs/bootstrap.vertical-tabs.css";
 
 body {
-    font-family: 'Lato';
+  font-family: 'Lato';
 }
+
+.nav {
+  > li > a > .fa {
+    margin-right: 5px;
+  }
+}
+
+.heading {
+  font-family: 'Oswald';
+  letter-spacing: 3px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.clear-margin {
+  margin: 0;
+}
+
+section {
+  margin: 0;
+  padding: 20px;
+}
+
+.padded {
+  padding: 20px;
+}
+
+.text-with-shadow {
+  text-shadow: 0 0 10px rgba(0,0,0,0.8);
+}
+
+.text-lighter {
+  font-weight: 300;
+}
+
+.designation {
+  margin-top: 10px;
+
+  span {
+    .text-with-shadow();
+
+    display: inline-block;
+    border-top: 1px solid #888;
+    padding-top: 10px;
+  }
+}
+
+.personal-intro {
+  background-image: url("/static/img/laptop-bg.png");
+  background-size: cover;
+  color: white;
+
+  h1, h2 {
+    .text-with-shadow();
+    font-weight: 100;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 0;
+  }
+}
+
+.summary {
+  .text-with-shadow();
+  margin-top: 40px;
+}
+
+.link-disguise {
+  &, &:hover {
+  color: inherit;
+  }
+}
+
+.about-me {
+  .tab-content {
+    .padded();
+    .border-bottom-radius(4px);
+
+    border: 1px solid #ddd;
+    border-top: 0;
+  }
+}
+
+@import "phone-styles.less";
+@import "./resume/work-experience.less";
