Implemented Skills & Work Experience

--- a/jade/intro.jade
+++ b/jade/intro.jade
@@ -10,7 +10,8 @@ section.section.jumbotron.personal-intro(data-anchor="home")
     p.lead.summary.col-md-8.col-md-offset-2
         | Web developer for#{' '}
         span.js-experience
-        | .#{' '} Most comfortable with Javascript & Ruby although I've written code in Python, Java & C. I do specialize in the Frontend aspect of Web Development.
+        | , with specialization in Frontend Technologies. Has good sense of UI and UX design.
+        | #{' '} Loves coding in Javascript and Ruby.
         br
         br
-        | Familiar with BackboneJS, EmberJS, AngularJS, Ruby on Rails, AWS Opsworks, Selenium. Recently started getting into Web Design.
+        | Familiar with BackboneJS, EmberJS, AngularJS, Ruby on Rails, AWS Opsworks, Selenium (Python). Recently started getting into Web Design.
