--- a/jade/resume/skills.jade
+++ b/jade/resume/skills.jade
@@ -16,3 +16,7 @@
     .col-xs-9
       .tab-content
         include ./skills/frontend
+        include ./skills/backend
+        include ./skills/testing
+        include ./skills/design
+        include ./skills/deployment
