--- a/jade/resume/skills/deployment.jade
+++ b/jade/resume/skills/deployment.jade
@@ -1,5 +1,5 @@
-.tab-pane.active.fade.in#frontend
-  each keywords, name in skills.frontend
+.tab-pane.fade#deployment
+  each keywords, name in skills.deployment
     section.section-skills
       header
         h4= name
