--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,7 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
 @import "../bower_components/fontawesome/less/font-awesome.less";
 @import (inline) "../bower_components/bootstrap-vertical-tabs/bootstrap.vertical-tabs.css";
+@import "variables.less";
 
 body {
   font-family: 'Lato';
@@ -93,4 +94,5 @@ section {
 
 @import "phone-styles.less";
 @import "./resume/work-experience.less";
+@import "./resume/skills.less";
 // @import (inline) "../bower_components/fullpage/jquery.fullPage.css";
