--- a/jade/resume/skills/design.jade
+++ b/jade/resume/skills/design.jade
@@ -1,5 +1,5 @@
-.tab-pane.active.fade.in#frontend
-  each keywords, name in skills.frontend
+.tab-pane.fade#design
+  each keywords, name in skills.design
     section.section-skills
       header
         h4= name
