--- a/jade/resume/skills/testing.jade
+++ b/jade/resume/skills/testing.jade
@@ -1,5 +1,5 @@
-.tab-pane.active.fade.in#frontend
-  each keywords, name in skills.frontend
+.tab-pane.fade#testing
+  each keywords, name in skills.testing
     section.section-skills
       header
         h4= name
