--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8064,7 +8064,7 @@ body {
   text-align: center;
 }
 .clear-margin {
-  margin: 0;
+  margin: 0 !important;
 }
 section {
   margin: 0;
@@ -8118,6 +8118,18 @@ section {
   border-bottom-left-radius: 4px;
   border: 1px solid #ddd;
   border-top: 0;
+}
+.contact-section {
+  background-image: url("/static/img/blue-abstract.png");
+  background-size: contain;
+  color: white;
+}
+.contact-section .get-in-touch {
+  color: white;
+  text-decoration: underline;
+}
+.hr-lg {
+  margin: 40px 0;
 }
 @media (max-width: 480px) {
   .picture-and-name-wrapper {
@@ -8232,4 +8244,175 @@ section {
 }
 .section-skills:last-child {
   margin-bottom: 0;
+}
+.social-links-group {
+  display: inline-block;
+  margin-right: 40px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px 10px;
+}
+.social-links-group:last-child {
+  margin-right: 0;
+}
+.social-links-group > a {
+  font-size: 1.5em;
+  margin-right: 15px;
+  display: inline-block;
+}
+.social-links-group > a:last-child,
+.social-links-group > a:last-child:hover {
+  margin-right: 0;
+}
+.social-links-group i.fa {
+  vertical-align: middle;
+}
+.social-links-group img.quora-icon {
+  width: 38px;
+  height: 38px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.link-github {
+  color: #454545;
+}
+.link-github:hover,
+.link-github:focus {
+  text-decoration: none;
+  color: #2b2b2b;
+}
+.link-twitter {
+  color: #33ccff;
+}
+.link-twitter:hover,
+.link-twitter:focus {
+  text-decoration: none;
+  color: #00bfff;
+}
+.link-blog {
+  color: #f36f24;
+}
+.link-blog:hover,
+.link-blog:focus {
+  text-decoration: none;
+  color: #d8560c;
+}
+.link-linkedin {
+  color: #007bb6;
+}
+.link-linkedin:hover,
+.link-linkedin:focus {
+  text-decoration: none;
+  color: #005983;
+}
+.link-skype {
+  color: #12a5f4;
+}
+.link-skype:hover,
+.link-skype:focus {
+  text-decoration: none;
+  color: #0986ca;
+}
+.link-stackoverflow {
+  color: #8e8e92;
+}
+.link-stackoverflow:hover,
+.link-stackoverflow:focus {
+  text-decoration: none;
+  color: #747479;
+}
+.link-soundcloud {
+  color: #e8822d;
+}
+.link-soundcloud:hover,
+.link-soundcloud:focus {
+  text-decoration: none;
+  color: #cc6916;
+}
+.link-pinterest {
+  color: #bd091f;
+}
+.link-pinterest:hover,
+.link-pinterest:focus {
+  text-decoration: none;
+  color: #8c0717;
+}
+.link-vimeo {
+  color: #17b3e8;
+}
+.link-vimeo:hover,
+.link-vimeo:focus {
+  text-decoration: none;
+  color: #128fba;
+}
+.link-behance {
+  color: #2c98cf;
+}
+.link-behance:hover,
+.link-behance:focus {
+  text-decoration: none;
+  color: #2379a5;
+}
+.link-codepen {
+  color: #1c1c1c;
+}
+.link-codepen:hover,
+.link-codepen:focus {
+  text-decoration: none;
+  color: #020202;
+}
+.link-foursquare {
+  color: #fa4778;
+}
+.link-foursquare:hover,
+.link-foursquare:focus {
+  text-decoration: none;
+  color: #f91554;
+}
+.link-reddit {
+  color: #545454;
+}
+.link-reddit:hover,
+.link-reddit:focus {
+  text-decoration: none;
+  color: #3b3b3b;
+}
+.link-spotify {
+  color: #acd200;
+}
+.link-spotify:hover,
+.link-spotify:focus {
+  text-decoration: none;
+  color: #829f00;
+}
+.link-dribbble {
+  color: #ce366f;
+}
+.link-dribbble:hover,
+.link-dribbble:focus {
+  text-decoration: none;
+  color: #a82959;
+}
+.link-facebook {
+  color: #4b6daa;
+}
+.link-facebook:hover,
+.link-facebook:focus {
+  text-decoration: none;
+  color: #3b5687;
+}
+.link-angellist {
+  color: black;
+}
+.link-angellist:hover,
+.link-angellist:focus {
+  text-decoration: none;
+  color: #000000;
+}
+.link-bitbucket {
+  color: #205081;
+}
+.link-bitbucket:hover,
+.link-bitbucket:focus {
+  text-decoration: none;
+  color: #163758;
 }
