--- a/jade/index.jade
+++ b/jade/index.jade
@@ -13,6 +13,7 @@ body
     include intro
     include about-me
     include resume
+    include contact
 
   include js-scripts
   include google-analytics
