Implemented ruby rack server to server static files via heroku

--- a/jade/intro.jade
+++ b/jade/intro.jade
@@ -2,7 +2,7 @@ section.section.jumbotron.personal-intro(data-anchor="home")
   div.picture-and-name-wrapper
     span
       .profile-pic-wrapper.text-center
-        img.img-round(src="/static/img/profile-pic.png", alt="Profile Picture")
+        img.img-round(src="/images/profile-pic.png", alt="Profile Picture")
       h1.heading.name Mudassir Ali
   h2.text-lighter.designation: span Javascript Frontend Engineer
 
