--- a/less/main.less
+++ b/less/main.less
@@ -42,7 +42,7 @@ section {
 }
 
 .personal-intro {
-  background-image: url("/static/img/laptop-bg.png");
+  background-image: url("/images/laptop-bg.png");
   background-size: cover;
   color: white;
 
@@ -93,7 +93,7 @@ section {
 }
 
 .contact-section {
-  background-image: url("/static/img/blue-abstract.png");
+  background-image: url("/images/blue-abstract.png");
   background-size: contain;
   color: white;
 
