--- a/jade/index.jade
+++ b/jade/index.jade
@@ -5,7 +5,7 @@ head
   title Mudassir Ali
   meta(name='description', content='')
   meta(name='viewport', content='width=device-width, initial-scale=1')
-  link(rel='stylesheet', href='static/css/main.css')
+  link(rel='stylesheet', href='/css/main.css')
 
 body
   include navbar-desktop
