--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,10 +1,7 @@
 doctype html(lang="en")
 head
-  meta(charset='utf-8')
-  meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
   title Mudassir Ali
-  meta(name='description', content='')
-  meta(name='viewport', content='width=device-width, initial-scale=1')
+  include meta-tags
   link(rel='stylesheet', href='/css/main.css')
 
 body
