update quora link

--- a/jade/contact.jade
+++ b/jade/contact.jade
@@ -33,5 +33,5 @@ section.section.contact-section(data-anchor="contact")
               i.fa.fa-facebook.fa-2x
             a(href="//twitter.com/guesswhat4951", target="_blank", data-toggle="tooltip" data-placement="top" title="Twitter").link-twitter
               i.fa.fa-twitter.fa-2x
-            a(href="//stackoverflow.com/users/1482899/mudassir-ali", target="_blank", data-toggle="tooltip" data-placement="top" title="Quora").clear-margin
+            a(href="//www.quora.com/Mudassir-Ali-4", target="_blank", data-toggle="tooltip" data-placement="top" title="Quora").clear-margin
               img.quora-icon(src="/images/quora.png", alt="Quora Profile")
