--- a/less/main.less
+++ b/less/main.less
@@ -1,114 +1,54 @@
-@import "../bower_components/bootstrap/less/bootstrap.less";
-@import "../bower_components/fontawesome/less/font-awesome.less";
-@import (inline) "../bower_components/bootstrap-vertical-tabs/bootstrap.vertical-tabs.css";
-@import "variables.less";
+@so-orange: #e68a00;
 
-body {
-  font-family: 'Lato';
+body, .jr-card-theme-default .jr-card {
+  font-family: 'Lato' !important;
 }
 
-.nav {
-  > li > a > .fa {
-    margin-right: 5px;
+.container {
+  width: 80%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.col-half {
+  width: 50%;
+}
+
+.so-card-container {
+  margin-top: 20px;
+  width: 49%;
+}
+
+#so-card-widget {
+  .so-card {
+    .so-header {
+      display: none;
+    }
+
+    &:before {
+      content: "StackOverflow";
+      font-family: 'oswald';
+      letter-spacing: 1;
+      font-size: 1.2em;
+      font-weight: 100;
+      color: @so-orange;
+    }
+
+    .so-reputation {
+      color: rgb(102,102,102);
+      font-weight: 100;
+    }
+
+    .so-reputation-label {
+      color: @so-orange;
+    }
+
+    .so-content {
+      padding: 20px 0;
+    }
+
+    .so-footer {
+      padding-top: 20px;
+    }
   }
 }
-
-.heading {
-  font-family: 'Oswald';
-  letter-spacing: 3px;
-  margin-bottom: 40px;
-  text-align: center;
-}
-
-.clear-margin {
-  margin: 0 !important;
-}
-
-section {
-  margin: 0;
-  padding: 20px;
-}
-
-.padded {
-  padding: 20px;
-}
-
-.text-with-shadow {
-  text-shadow: 0 0 10px rgba(0,0,0,0.8);
-}
-
-.text-lighter {
-  font-weight: 300;
-}
-
-.personal-intro {
-  background-image: url("/images/laptop-bg.png");
-  background-size: cover;
-  color: white;
-
-  h1 {
-    font-weight: 100;
-  }
-
-  h1, h2 {
-    .text-with-shadow();
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 0;
-  }
-}
-
-.designation {
-  margin-top: 10px;
-  font-weight: 200;
-
-  span {
-    .text-with-shadow();
-
-    display: inline-block;
-    border-top: 1px solid #888;
-    padding-top: 10px;
-  }
-}
-
-.summary {
-  .text-with-shadow();
-  margin-top: 40px;
-}
-
-.link-disguise {
-  &, &:hover {
-  color: inherit;
-  }
-}
-
-.about-me {
-  .tab-content {
-    .padded();
-    .border-bottom-radius(4px);
-
-    border: 1px solid #ddd;
-    border-top: 0;
-  }
-}
-
-.contact-section {
-  background-image: url("/images/blue-abstract.png");
-  background-size: contain;
-  color: white;
-
-  .get-in-touch {
-    color: white;
-    text-decoration: underline;
-  }
-}
-
-.hr-lg {
-  margin: 40px 0;
-}
-
-@import "phone-styles.less";
-@import "./resume/work-experience.less";
-@import "./resume/skills.less";
-@import "social-links.less";
-// @import (inline) "../bower_components/fullpage/jquery.fullPage.css";
