Using so card widget callback to update label

--- a/jade/js-scripts.jade
+++ b/jade/js-scripts.jade
@@ -5,7 +5,6 @@ script(
   type="text/javascript",
   src="//mudassir0909.github.io/stackoverflow-card/dist/1.0.0/so-card-widget.min.js")
 script.
-  window.onload = function() {
-    debugger;
+  window.soAsyncInit = function() {
     document.getElementsByClassName('so-reputation-label')[0].innerText = 'reputation';
   }
