minor css changes

--- a/less/main.less
+++ b/less/main.less
@@ -4,6 +4,10 @@ body, .jr-card-theme-default .jr-card {
   font-family: 'Lato' !important;
 }
 
+body {
+  padding: 15px 0;
+}
+
 .container {
   width: 80%;
   max-width: 1024px;
@@ -21,8 +25,14 @@ body, .jr-card-theme-default .jr-card {
 
 #so-card-widget {
   .so-card {
-    .so-header {
+    .so-display-name {
       display: none;
+    }
+
+    .so-logo {
+      right: 20px;
+      top: 22px;
+      left: inherit;
     }
 
     &:before {
